--- a/src/app/main-page/fs-slider/fs-slider.component.html
+++ b/src/app/main-page/fs-slider/fs-slider.component.html
@@ -17,10 +17,155 @@
           placeholder="Enter email">
       </div>
       <button
-        class="btn balance__title-btn"
-        (click)="openSendMoneyPopup(true)">
+        class="btn balance__title-btn">
         {{'Start Registration' | translate}}
       </button>
     </form>
   </div>
+</div>
+<div class="run-line">
+  <marquee scrollamount="4">
+    <div class="run-line-inner">
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+      <div class="run-line-item">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </marquee>
 </div>
