DEVEX-3794 changed url

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -146,7 +146,7 @@
       <div class="bottom-social-wr">
         <div class="bottom-social-item">
           <a
-            href="https://coinspace.com"
+            href="http://coinpricetoday.com"
             class="coinspace"
             target="_blank"
             title="Facebook"
@@ -154,7 +154,7 @@
           >
             <img
               src="https://coinpricetoday.com/files/2019/08/icon.png"
-              alt="https://coinspace.com"
+              alt="http://coinpricetoday.com"
             />
           </a>
         </div>
