DEVEX-3914 added isMapinPage getter

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <!-- HEADER START-->
 <header
   class="header"
+  [ngClass]="{'main-header': isMainPage}"
   *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'"
 >
   <div class="header__inner">
