--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <div
   class="page-wrap"
-  [ngClass]="{'dark-theme': isCurrentThemeDark()}">
+  [ngClass]="{'dark-theme': isCurrentThemeDark()}"
+>
 
   <article
     class="banner-wr"
+    [ngClass]="{'main-page': isMainPage}"
     id="banner-wr"
-    *ngIf="!technicalWorks">
+    *ngIf="!technicalWorks"
+  >
     <style>
       .banner-content {
         width: 100%;
@@ -29,16 +32,19 @@
     </style>
     <a
       class="banner-content"
-      href="https://about.exrates.me/ru/form-listing">
+      href="https://about.exrates.me/ru/form-listing"
+    >
       <img
         src="assets/img/apply-by-listing.png"
-        alt="">
+        alt=""
+      >
     </a>
   </article>
   <!-- *ngIf="technicalWorks" -->
   <div
     class="tech-banner"
-    *ngIf="technicalWorks">
+    *ngIf="technicalWorks"
+  >
     <div class="banner-content">TECHNICAL WORKS</div>
   </div>
 
