--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -149,7 +149,7 @@
             href="http://coinpricetoday.com"
             class="coinspace"
             target="_blank"
-            title="Facebook"
+            title="Coinpricetoday"
             rel="nofollow noopener noreferrer"
           >
             <img
