--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,21 +1,6 @@
 <div class="home-page-container">
   <app-fs-slider></app-fs-slider>
+  <app-run-line></app-run-line>
   <app-markets-home></app-markets-home>
+  <app-bottom-slider></app-bottom-slider>
 </div>
-
-<ngx-slick-carousel
-  class="carousel"
-  #slickModal="slick-carousel"
-  [config]="slideConfig"
->
-  <div
-    ngxSlickItem
-    class="slide"
-  >
-    <img
-      src="#"
-      alt=""
-      width="100%"
-    >
-  </div>
-</ngx-slick-carousel>
