--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,21 @@
 @import '../../assets/scss/variables';
 
 .header {
+  &.main-header{
+    background-color: transparent;
+    .menu__link-text{
+      color: #fff;
+    }
+    .menu__link--auth--reg{
+      background-color: #237BEF;
+      &:hover{
+        background-color: #4590F3;
+      }
+    }
+    .translate__trigger path{
+      fill: #fff;
+    }
+  }
   display: none;
   /*--- modificators start ---*/
   /*--- modificators end ---*/
