--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -1,23 +1,87 @@
 .fs-slider-container {
   position: relative;
   background-color: #e5e5e5;
+  top: -48px;
+  &.bottom-slider {
+    .slider-item {
+      .bg-wr {
+        position: relative;
+        overflow: hidden;
+        padding-top: 52%;
+        img {
+          width: 100%;
+          position: absolute;
+          display: block;
+          top: -999px;
+          bottom: -999px;
+          left: -999px;
+          right: -999px;
+          margin: auto;
+          min-height: 100%;
+        }
+      }
+    }
+  }
+  .slick-prev,
+  .slick-next {
+    position: absolute;
+    display: block;
+    width: 24px;
+    height: 45px;
+    cursor: pointer;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    transform: none;
+    padding: 0;
+    border: none;
+    outline: none;
+    opacity: 0.4;
+    z-index: 2;
+    transition: 0.3s;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .slick-prev:before,
+  .slick-next:before {
+    display: none;
+  }
+  .slick-prev {
+    left: 56px;
+    background-image: url(assets/img/slider-arr-left.svg);
+  }
+  .slick-next {
+    right: 56px;
+    background-image: url(assets/img/slider-arr-right.svg);
+  }
+  .arrows-container {
+    position: absolute;
+    top: 48px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    max-width: 1464px;
+    margin: 0 auto;
+    padding: 0 57px;
+  }
   .slider-item {
     position: relative;
     .bg-wr {
       img {
         width: 100%;
         position: relative;
-        top: -48px;
+
         display: block;
       }
     }
     .slide-txt {
       position: absolute;
-      height: 50%;
+      height: calc(50% + 48px);
       top: 0;
       max-width: 1464px;
       margin: 0 auto;
-      padding: 0 34px;
+      padding: 0 134px;
       left: 0;
       right: 0;
       display: flex;
@@ -56,13 +120,13 @@
   .register-form {
     max-width: 1464px;
     margin: 0 auto;
-    padding: 0 34px;
+    padding: 0 134px;
     left: 0;
     right: 0;
 
     position: absolute;
 
-    height: calc(50% - 62px);
+    height: calc(50% - 110px);
     bottom: 0;
     width: 100%;
   }
@@ -105,23 +169,26 @@
 
 .run-line {
   background-color: #e5e5e5;
-  marquee {
-    position: relative;
-    top: -48px;
-    background-color: #222133;
+
+  .slick-track {
+    width: 100%;
+    display: flex;
   }
   .run-line-inner {
     display: flex;
     padding: 31px 0;
+    position: relative;
+    top: -48px;
+    background-color: #222133;
   }
   .run-line-item {
     display: flex;
     flex-wrap: wrap;
     padding: 6px 23px;
     border-right: 1px solid #363f4d;
-    min-width: 233px;
-    &:first-child {
-      border-left: 1px solid #363f4d;
+    width: calc(100% / 6);
+    &:last-child {
+      border-right: none;
     }
     .pair {
       width: 50%;
@@ -192,9 +259,9 @@
   .markets-block-link {
     display: flex;
     max-width: 1464px;
-      margin: 0 auto;
-      padding: 0 34px;
-
+    margin: 0 auto;
+    padding: 0 34px;
+    margin-bottom: 70px;
   }
   .link-item {
     width: 25%;
@@ -215,7 +282,200 @@
         font-size: 16px;
         line-height: 1.15;
         text-align: center;
-        color: #0D2038;
+        color: #0d2038;
+      }
+    }
+  }
+}
+
+.markets-table {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 0 40px;
+  background-color: #fff;
+  margin-bottom: 100px;
+  .search-block {
+    max-width: 245px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 10px 0;
+    margin: 0 auto;
+    input {
+      position: relative;
+      display: block;
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 28px;
+      color: #000;
+      width: calc(100% - 25px);
+      border: none;
+      outline: none;
+      &::placeholder {
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 28px;
+        color: #e5ebf1;
+      }
+    }
+    label {
+      display: block;
+      width: 16px;
+      height: 17px;
+      background-image: url(assets/img/search-icon.svg);
+    }
+  }
+  .btn-block {
+    width: 100%;
+    border-bottom: 1px solid #e5ebf1;
+    display: flex;
+    align-items: center;
+    .favorites {
+      display: flex;
+      align-items: center;
+      border: none;
+      background-color: transparent;
+      padding: 12px 10px;
+      outline: none;
+      padding-left: 25px;
+      position: relative;
+      &:hover {
+        span {
+          color: #237bef;
+        }
+      }
+      &.active {
+        span {
+          color: #237bef;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          right: 15px;
+          left: 39px;
+          height: 2px;
+          background-color: #237bef;
+        }
+      }
+      .f-icon {
+        svg {
+          margin-right: 10px;
+        }
+      }
+      span {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 1.15;
+        text-align: center;
+
+        color: #5a6a79;
+      }
+    }
+    .home-markets-tab {
+      border: none;
+      background-color: transparent;
+      padding: 12px 15px;
+      cursor: pointer;
+      position: relative;
+      outline: none;
+      &:hover {
+        span {
+          color: #237bef;
+        }
+      }
+      &.active {
+        span {
+          color: #237bef;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          right: 15px;
+          left: 15px;
+          height: 2px;
+          background-color: #237bef;
+        }
+      }
+      span {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 1.15;
+        color: #5a6a79;
+      }
+    }
+  }
+  .table {
+    .thead {
+      border-bottom: 1px solid #e5ebf1;
+      .thead-item {
+        font-weight: normal;
+        font-size: 13px;
+        line-height: 1.15;
+        color: #90a0be;
+        padding: 10px;
+      }
+      .fav {
+        width: 50px;
+      }
+      .pair {
+        width: 120px;
+      }
+      .change {
+        width: 130px;
+        text-align: right;
+      }
+      .last-pr {
+        text-align: right;
+      }
+      .hight {
+        text-align: right;
+      }
+      .low {
+        text-align: right;
+      }
+      .volume {
+        text-align: right;
+        padding-right: 25px;
+      }
+    }
+    .trow {
+      border-bottom: 1px solid #e5ebf1;
+      .table-item {
+        font-weight: normal;
+        font-size: 15px;
+        line-height: 1.15;
+        color: #000000;
+        padding: 10px;
+      }
+      .fav {
+        padding-left: 25px;
+      }
+      .pair {
+      }
+      .change {
+        text-align: right;
+        span {
+          color: #00b83f;
+          padding: 4px 10px;
+          background: #e8f6f3;
+          border-radius: 4px;
+        }
+      }
+      .last-pr {
+        text-align: right;
+      }
+      .hight {
+        text-align: right;
+      }
+      .low {
+        text-align: right;
+      }
+      .volume {
+        text-align: right;
+        padding-right: 25px;
       }
     }
   }
