--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,7 @@
 <div class="home-page-container">
   <app-fs-slider></app-fs-slider>
   <app-run-line></app-run-line>
+  <app-graphic-links></app-graphic-links>
   <app-markets-home></app-markets-home>
   <app-bottom-slider></app-bottom-slider>
 </div>
