--- a/src/app/main-page/markets-home/markets-home.component.html
+++ b/src/app/main-page/markets-home/markets-home.component.html
@@ -1,42 +1,9 @@
-<div class="markets-home">
-  <div class="markets-block-link">
-    <div class="link-item">
-      <a href="#" class="lnk"></a>
-      <div class="icon-wr">
-        <img src="assets/img/link1.svg" alt="">
-      </div>
-      <div class="txt-wr"><span>Профессиональная <br>аналитика рынка</span></div>
-    </div>
-    <div class="link-item">
-      <a href="#" class="lnk"></a>
-      <div class="icon-wr">
-        <img src="assets/img/link2.svg" alt="">
-      </div>
-      <div class="txt-wr"><span>X-Platform для запуска <br>IEO</span></div>
-    </div>
-    <div class="link-item">
-      <a href="#" class="lnk"></a>
-      <div class="icon-wr">
-        <img src="assets/img/link3.svg" alt="">
-      </div>
-      <div class="txt-wr"><span>24/7 Онлайн поддержка</span></div>
-    </div>
-    <div class="link-item">
-      <a href="#" class="lnk"></a>
-      <div class="icon-wr">
-        <img src="assets/img/link4.svg" alt="">
-      </div>
-      <div class="txt-wr"><span>Партнерская программа -<br> поддержка управления
-          <br>рынком </span></div>
-    </div>
-  </div>
-
+<div class="markets-table-container">
   <div class="markets-table">
     <div class="search-block">
       <label for="search"></label>
       <input type="text" name="search" placeholder="Search Coin Name"
         id="search">
-
     </div>
     <div class="btn-block">
       <button class="favorites">
@@ -527,4 +494,4 @@
                                                                                                                                                                                                       
                 </table>
               </div>
-            </div>
+            </div>           
