--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -255,13 +255,12 @@
 
 .markets-home {
   background-color: #e5e5e5;
-  padding: 38px 0 100px;
+  padding: 38px 0 70px;
   .markets-block-link {
     display: flex;
     max-width: 1464px;
     margin: 0 auto;
     padding: 0 34px;
-    margin-bottom: 70px;
   }
   .link-item {
     width: 25%;
@@ -287,7 +286,10 @@
     }
   }
 }
-
+.markets-table-container{
+padding-bottom: 100px;
+background-color: #e5e5e5;
+}
 .markets-table {
   max-width: 1200px;
   margin: 0 auto;
