--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -6,25 +6,46 @@
   <div class="row settings__buttons-row">
     <div class="settings-button-wr">
       <!-- REMOVE "DISABLED" WHEN YOU NEED UNBLOCK KYC -->
+      <!-- [disabled]="true" -->
       <button
-        [disabled]="true"
         class="btn settings__btn"
         (click)="onOpenKYCPopup(1)"
-        [ngClass]="{'active': verificationStatus === NOT_VERIFIED}">
+        [ngClass]="{'active': verificationStatus === NOT_VERIFIED}"
+      >
         <span class="btn__icon btn__icon--blue btn__icon--hover-white">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
-            <rect y="10.6953" width="2" height="7.94554" rx="1" transform="rotate(-45 0 10.6953)" fill="white" />
-            <rect x="5.73438" y="16.3984" width="2" height="14.3423" rx="1" transform="rotate(-135 5.73438 16.3984)"
-              fill="white" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="17"
+            viewBox="0 0 16 17"
+            fill="none"
+          >
+            <rect
+              y="10.6953"
+              width="2"
+              height="7.94554"
+              rx="1"
+              transform="rotate(-45 0 10.6953)"
+              fill="white"
+            />
+            <rect
+              x="5.73438"
+              y="16.3984"
+              width="2"
+              height="14.3423"
+              rx="1"
+              transform="rotate(-135 5.73438 16.3984)"
+              fill="white"
+            />
           </svg>
         </span>
         <span class="button__text">{{'Verification ID Document' | translate}}</span>
       </button>
     </div>
     <!-- HIDE THIS  WHEN YOU NEED UNBLOCK KYC -->
-    <div class="subtitle settings__content-subtitle mt-20">
+    <!-- <div class="subtitle settings__content-subtitle mt-20">
       {{'Functional is deactivated!' | translate}}
-    </div>
+    </div> -->
 
   </div>
   <div class="public-id">
@@ -36,10 +57,21 @@
         <p>{{userInfo.publicId}}</p>
       </div>
       <div class="copy-button">
-        <button (click)="copyPublicId(userInfo.publicId)" *ngIf="!isPublicIdCopied">
-          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px" y="0px" viewBox="0 0 488.3 488.3" style="enable-background:new 0 0 488.3 488.3;"
-            xml:space="preserve">
+        <button
+          (click)="copyPublicId(userInfo.publicId)"
+          *ngIf="!isPublicIdCopied"
+        >
+          <svg
+            version="1.1"
+            id="Capa_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 488.3 488.3"
+            style="enable-background:new 0 0 488.3 488.3;"
+            xml:space="preserve"
+          >
             <g>
               <g>
                 <path d="M314.25,85.4h-227c-21.3,0-38.6,17.3-38.6,38.6v325.7c0,21.3,17.3,38.6,38.6,38.6h227c21.3,0,38.6-17.3,38.6-38.6V124
@@ -55,12 +87,25 @@
         </button>
 
       </div>
-      <div class="copy-button" *ngIf="isPublicIdCopied">
+      <div
+        class="copy-button"
+        *ngIf="isPublicIdCopied"
+      >
         <button (click)="copyPublicId(userInfo.publicId)">
-          <svg class="success" width="15" height="11" viewBox="0 0 15 11" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.42383 7.38525L4.16746 9.89641L13.4752 1" stroke-width="1.5" stroke-linecap="round"
-              stroke-linejoin="round" />
+          <svg
+            class="success"
+            width="15"
+            height="11"
+            viewBox="0 0 15 11"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1.42383 7.38525L4.16746 9.89641L13.4752 1"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
           </svg>
           <span class="success-txt">Copied</span>
         </button>
@@ -69,5 +114,3 @@
     </div>
   </div>
 </div>
-
-
