--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,4 +4,6 @@
   <app-graphic-links></app-graphic-links>
   <app-markets-home></app-markets-home>
   <app-bottom-slider></app-bottom-slider>
+  <app-info-grafics></app-info-grafics>
+  <app-bottom-form></app-bottom-form>
 </div>
