--- a/src/app/main-page/info-grafics/info-grafics.component.html
+++ b/src/app/main-page/info-grafics/info-grafics.component.html
@@ -1,3 +1,31 @@
-<p>
-  info-grafics works!
-</p>
+<div class="info-graph">
+  <div class="markets-block-link">
+    <div class="link-item">
+      <div class="icon-wr">
+        <img src="assets/img/info-gr1.svg" alt="">
+      </div>
+      <div class="txt-wr"><span>Скорость обработки до 10 000 <br>сделок в
+          секунду и 1 000 000 <br>TCP-соединений.</span></div>
+    </div>
+    <div class="link-item">
+      <div class="icon-wr">
+        <img src="assets/img/info-gr2.svg" alt="">
+      </div>
+      <div class="txt-wr"><span>Брандмауэр веб-приложений <br>обнаруживает и
+          блокирует <br>хакерские атаки.</span></div>
+    </div>
+    <div class="link-item">
+      <div class="icon-wr">
+        <img src="assets/img/info-gr3.svg" alt="">
+      </div>
+      <div class="txt-wr"><span>Надежная безопасность: более <br>95% валют
+          хранятся на <br>холодных кошельках</span></div>
+    </div>
+    <div class="link-item">
+      <div class="icon-wr">
+        <img src="assets/img/info-gr4.svg" alt="">
+      </div>
+      <div class="txt-wr"><span>Удобный интерфейс с <br>добавлением обычных <br>инструментов</span></div>
+    </div>
+  </div>
+</div>
