--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -518,8 +518,9 @@
   }
 }
 .bottom-form-home {
-  background: #1f1e30;
+  background: #1F1E30;
   padding: 100px 0;
+  border-bottom: 1px solid #363F4D;
 }
 .bottom-form-wr {
   display: flex;
