--- a/src/app/main-page/fs-slider/fs-slider.component.html
+++ b/src/app/main-page/fs-slider/fs-slider.component.html
@@ -3,7 +3,8 @@
   <ngx-slick-carousel
     class="carousel run-line-inner"
     #slickModal="slick-carousel"
-    [config]="slideConfig">
+    [config]="slideConfig"
+    (afterChange)="afterChange($event)">
     <div
       ngxSlickItem
       class="slider-item">
@@ -57,5 +58,26 @@
         {{'Start Registration' | translate}}
       </button>
     </form>
+  </div>
+  <div class="slider-dots">
+    <div
+      class="dots-item"
+      [ngClass]="{'active': currSlide == '0'}"
+      (click)="slickModal.slickGoTo(0)">
+      <img src="assets/img/prev1.jpg" alt="">
+    </div>
+    <div
+      class="dots-item"
+      [ngClass]="{'active': currSlide == '1'}"
+      (click)="slickModal.slickGoTo(1)">
+      <img src="assets/img/prev2.jpg" alt="">
+    </div>
+    <div
+      class="dots-item"
+      [ngClass]="{'active': currSlide == '2'}"
+      (click)="slickModal.slickGoTo(2)">
+      <img src="assets/img/prev3.jpg" alt="">
+    </div>
+
   </div>
 </div>
