--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -518,9 +518,9 @@
   }
 }
 .bottom-form-home {
-  background: #1F1E30;
+  background: #1f1e30;
   padding: 100px 0;
-  border-bottom: 1px solid #363F4D;
+  border-bottom: 1px solid #363f4d;
 }
 .bottom-form-wr {
   display: flex;
@@ -581,6 +581,27 @@
         font-size: 17px;
         line-height: 46px;
       }
+    }
+  }
+}
+
+.slider-dots {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  z-index: 2;
+  .dots-item {
+    max-width: 160px;
+    margin-right: 8px;
+    border: 2px solid transparent;
+    transition: .3s;
+    &.active{
+      border: 2px solid #237BEF;
+    }
+    img{
+      width: 100%;
+      display: block;
     }
   }
 }
