--- a/src/app/main-page/bottom-slider/bottom-slider.component.html
+++ b/src/app/main-page/bottom-slider/bottom-slider.component.html
@@ -12,9 +12,28 @@
         <img src="assets/img/b-slider1.jpg" alt="">
       </div>
       <div class="slide-txt">
+        <div class="top-part">
+          <div class="coin-part">
+            <div class="logo">
+              <img src="assets/img/eth-logo.svg" alt="">
+            </div>
+            <div class="additional-info">
+              <p>0.123 BTC<span>Volume: 121.089 BTC</span></p>
+            </div>
+          </div>
+
+          <div class="type">
+            <span>Анонс листинга</span>
+          </div>
+        </div>
         <div class="txt-inner">
           <h2>Самая популярная <br>валюта теперь в <br>торгуется на Exrates</h2>
         </div>
+      </div>
+      <div class="slide-link">
+        <a class="btn balance__title-btn" href="#">
+          By ETH Now
+        </a>
       </div>
     </div>
     <div
@@ -24,10 +43,30 @@
         <img src="assets/img/b-slider2.jpg" alt="">
       </div>
       <div class="slide-txt">
+        <div class="top-part">
+          <div class="coin-part">
+            <div class="logo">
+              <img src="assets/img/btc-logo.svg" alt="">
+            </div>
+            <div class="additional-info">
+              <p>0.123 BTC<span>Volume: 121.089 BTC</span></p>
+            </div>
+          </div>
+
+          <div class="type">
+            <span>Анонс листинга</span>
+          </div>
+        </div>
         <div class="txt-inner">
           <h2>Самая популярная <br>валюта теперь в гейм <br>индустрии вместе
             <br>с UBISOFT</h2>
         </div>
+
+      </div>
+      <div class="slide-link">
+        <a class="btn balance__title-btn" href="#">
+          By BTC Now
+        </a>
       </div>
     </div>
     <div
@@ -37,10 +76,30 @@
         <img src="assets/img/fs-sl1.jpg" alt="">
       </div>
       <div class="slide-txt">
+        <div class="top-part">
+          <div class="coin-part">
+            <div class="logo">
+              <img src="assets/img/btc-logo.svg" alt="">
+            </div>
+            <div class="additional-info">
+              <p>0.123 BTC<span>Volume: 121.089 BTC</span></p>
+            </div>
+          </div>
+
+          <div class="type">
+            <span>Анонс листинга</span>
+          </div>
+        </div>
         <div class="txt-inner">
           <h2><span>172,000 </span>трейдеров</h2>
           <p>Регистрируйся и стань частью трейдерского сообщества Exrates</p>
         </div>
+
+      </div>
+      <div class="slide-link">
+        <a class="btn balance__title-btn" href="#">
+          By BTC Now
+        </a>
       </div>
     </div>
   </ngx-slick-carousel>
